# DalESelfEBot

./: README.md  image_processor.py  parameters.yaml  requirements.txt  test_path_planner.py
GUI/: GUItest.py  gui_node.py  gui_notes_instructions.txt  main_gui.py  params.yaml
dale_integration/: README.md  package.xml  setup.cfg  setup.py
dale_integration/dale_integration/launch/: dale_launch.py
img_prc/: package.xml  setup.cfg  setup.py
img_prc/img_prc/: bg_rm.py  image_client.py  image_processor.py  image_sub.py  text
img_prc_interface/: CMakeLists.txt  package.xml
img_prc_interface/action/: Img.action
log/: latest_build
output/: waypoints.txt
src/tool_path_planning/: path_planner.py  tool_path_planner_node.py
ur3_control/: CMakeLists.txt  docker_instructions.txt  end_effector_dim.txt  hardware_instructions.txt  package.xml  simulation_instructions.txt  ur3e_calibration.txt
ur3_control/calibration/: docker_calibration_4.yaml  ur3e_calibration_1.yaml  ur3e_calibration_2.yaml  ur3e_calibration_4.yaml
ur3_control/config/: circle_waypoints.json  drawing_path.json  hardware_circle_waypoints.json  image_waypoints.json  kinematics.yaml  smiley_waypoints.json
ur3_control/launch/: moveit_stack.launch.py
ur3_control/rosbags/hardware_toolpath/: hardware_toolpath_0.db3  metadata.yaml
ur3_control/rosbags/sim_toolpath/: metadata.yaml  sim_toolpath_0.db3
ur3_control/scripts/: convert_bag_to_positions.py  generate_splines.py  generate_splines_smiley.py  hardware_ground_truth.json  img_to_splines.py  record_rosbag.py  sim_ground_truth.json  splines.csv  visualise_splines.py
ur3_control/src/: ik_solver_kdl.cpp  ik_solver_kdl.hpp  main.cpp  spline_follower.cpp  spline_follower.hpp  trajectory_utils.cpp  trajectory_utils.hpp
ur3_control/test/: test_ik_solver_kdl.cpp
ur3_control/unit_testing/: plot_actualpath_against_desiredpath.py  test_control_integration.cpp  test_tool_path_accuracy.cpp  test_tool_path_z_consistency.cpp
ur3_localisation/: CMakeLists.txt  frames_2025-04-18_13.09.12.gv  hardware_instructions.txt  package.xml  simulation_instructions.txt  ur3e_urdf.xml
ur3_localisation/config/: docker_params.yaml  hardware_params.yaml  hardware_params_2.yaml  hardware_params_3.yaml  params.yaml
ur3_localisation/install/: local_setup.sh  setup.sh
ur3_localisation/log/: latest_build
ur3_localisation/model/: ur3e.urdf
ur3_localisation/rosbags/harware_pos1/: harware_pos1_0.db3  metadata.yaml
ur3_localisation/rosbags/harware_pos2/: harware_pos2_0.db3  metadata.yaml
ur3_localisation/rosbags/harware_pos3/: harware_pos3_0.db3  metadata.yaml
ur3_localisation/rosbags/harware_pos4/: harware_pos4_0.db3  metadata.yaml
ur3_localisation/rosbags/sim_pos1/: metadata.yaml  sim_pos1_0.db3
ur3_localisation/rosbags/sim_pos2/: metadata.yaml  sim_pos2_0.db3
ur3_localisation/rosbags/sim_pos3/: metadata.yaml  sim_pos3_0.db3
ur3_localisation/rosbags/sim_pos4/: metadata.yaml  sim_pos4_0.db3
ur3_localisation/scripts/: convert_bag_pose.py  hardware_ground_truth.yaml  sim_ground_truth.yaml
ur3_localisation/src/: draw_rectangle.cpp  localisation_node.cpp
ur3_localisation/unit_testing/: integration_test_localisation_file_present.cpp  test1_four_locations_present.cpp  test2_location_accuracy.cpp
ur3e_moveit_config/: .setup_assistant  package.xml
ur3e_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur3e.ros2_control.xacro  ur3e.srdf  ur3e.urdf.xacro
ur3e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
