<?xml version="1.0"?>
<package format="3">
  <name>ur3_control</name>
  <version>0.1.0</version>
  <description>UR3e control package using MoveIt for motion planning</description>
  <maintainer email="jarred.g.deluca@student.uts.edu.au">Jarred Deluca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <depend>nlohmann_json</depend>

  <!-- MoveIt dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_core</depend>
  <!-- <depend>moveit_visual_tools</depend> -->

  <depend>tf2_ros</depend>

  <!-- Runtime Dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <!-- <exec_depend>tf2_ros</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
